--- a/app/src/js/app/components/tasks/views/dashboardView.html
+++ b/app/src/js/app/components/tasks/views/dashboardView.html
@@ -32,6 +32,14 @@
             </a>
         </div>
         <div class="imm-cstm__grid imm-cstm__cntr">
+            <a ui-sref="app.jira">
+                <div class="imm-cstm__grid-25-two">
+                    <img src="/assets/images/Jira-PBXDom.png" style="margin-bottom: 14px">
+                </div>
+                <b class="imm-wa__lbl">{{ 'navigation.jira' | translate }}</b>
+            </a>
+        </div>
+        <div class="imm-cstm__grid imm-cstm__cntr">
             <a ui-sref="app.taskManager">
                 <div class="imm-cstm__grid-25-two">
                     <img src="/assets/catalogos/conceptos-gasto.svg">
