--- a/app/src/js/app/components/reports/views/reportsView.html
+++ b/app/src/js/app/components/reports/views/reportsView.html
@@ -176,13 +176,13 @@
         <button class="imm-btn" ng-if="tracks.length" ng-click="exportToCSV()">
           Descargar CSV
         </button>
-        <button
+        <!-- <button
           class="imm-btn"
           ng-if="tracks.length"
           ng-click="exportToExcel('#exportReport')"
         >
           Descargar Excel
-        </button>
+        </button> -->
       </div>
     </div>
     <div class="imm-wa__cnt">
@@ -344,71 +344,122 @@
             </div>
           </div>
         </div>
-        <table ng-if="tracks.length" id="exportReport" style="display: none">
-          <thead>
-            <tr>
-              <th>{{ 'reports.user' | translate }}</th>
-              <th>{{ 'reports.client' | translate }}</th>
-              <th>{{ 'reports.project' | translate }}</th>
-              <th>{{ 'reports.task' | translate }}</th>
-              <th>{{ 'reports.start_time' | translate }}</th>
-              <th>{{ 'reports.end_time' | translate }}</th>
-              <th>{{ 'reports.duration' | translate }}</th>
-              <th>{{ 'reports.trackCost' | translate }}</th>
-              <th class="imm-cstm__grid-5"></th>
-            </tr>
-          </thead>
-          <tbody ng-repeat="tracks in tableTrack track by $index">
-            <tr
-              ng-repeat="track in tracks.tracks"
-              ng-class="{'active-task': track.type != 'projectInfo' && !track.endTime || track.endTime == '0000-00-00 00:00:00'}"
-            >
-              <td>{{track.userName + track.projectSubtotal.name}}</td>
-              <td>{{track.clientName}}</td>
-              <td>{{track.projectName | truncateTail:true:20:'...'}}</td>
-              <td>{{track.taskName | truncateTail:true:20:'...'}}</td>
-              <td>{{track.startTime | date:'dd/MM/yyyy HH:mm' }}</td>
-              <td>
-                {{track.endTime ? track.endTime : '' | date:'dd/MM/yyyy HH:mm'
-                }}
-              </td>
-              <td>{{track.duration}}</td>
-              <td>$ {{track.trackCost}}</td>
-              <td>
-                <a href="" ng-click="editTrack(track)">
-                  <img src="assets/images/icons/pencil-ico.svg" />
-                </a>
-              </td>
-            </tr>
-
-            <tr
-              style="
-                background-color: rgba(60, 144, 190, 0.1);
-                font-weight: bold;
-              "
-            >
-              <td colspan="5"></td>
-              <td>{{ 'reports.sub_total' | translate | uppercase }}</td>
-              <td>{{tracks.duration}}</td>
-              <td>$ {{tracks.subTotalCost}}</td>
-              <td></td>
-            </tr>
-          </tbody>
-          <tbody>
-            <tr
-              style="
-                background-color: rgba(104, 149, 191, 0.4);
-                font-weight: bold;
-              "
-            >
-              <td colspan="5"></td>
-              <td>{{ 'reports.total' | translate | uppercase }}</td>
-              <td>{{total}}</td>
-              <td>$ {{totalcost}}</td>
-              <td></td>
-            </tr>
-          </tbody>
-        </table>
+        <div ng-if="tracks.length" style="display: none">
+        <!-- <div ng-if="tracks.length"> -->
+          <table
+            id="exportReport"
+            ng-repeat="tracks in tableTrack"
+            style="margin-top: 0"
+          >
+            <thead ng-if="$first">
+              <tr>
+                <th>{{ 'reports.user' | translate }}</th>
+                <th>{{ 'reports.client' | translate }}</th>
+                <th>{{ 'reports.project' | translate }}</th>
+                <th>{{ 'reports.task' | translate }}</th>
+                <th>{{ 'reports.start_time' | translate }}</th>
+                <th>{{ 'reports.end_time' | translate }}</th>
+                <th>{{ 'reports.duration' | translate }}</th>
+                <th>{{ 'reports.trackCost' | translate }}</th>
+                <th class="imm-cstm__grid-5"></th>
+              </tr>
+            </thead>
+            <tbody ng-repeat="byTask in tracks.byTask">
+              <tr
+                ng-repeat="track in byTask.tracks track by $index"
+                ng-class="{'active-task': track.type != 'projectInfo' && !track.endTime || track.endTime == '0000-00-00 00:00:00'}"
+              >
+                <td>{{track.userName}}</td>
+                <td>{{track.clientName}}</td>
+                <td>{{track.projectName | truncateTail:true:20:'...'}}</td>
+                <td>{{track.taskName | truncateTail:true:20:'...'}}</td>
+                <td>{{track.startTime | date:'dd/MM/yyyy HH:mm' }}</td>
+                <td>
+                  {{track.endTime ? track.endTime : '' | date:'dd/MM/yyyy HH:mm'
+                  }}
+                </td>
+                <td>{{track.duration}}</td>
+                <td>$ {{track.trackCost}}</td>
+                <td>
+                  <a href="" ng-click="editTrack(track)">
+                    <img src="assets/images/icons/pencil-ico.svg" />
+                  </a>
+                </td>
+              </tr>
+              <tr
+                style="
+                  background-color: rgba(225, 56, 107, 0.1);
+                  font-weight: bold;
+                "
+              >
+                <td colspan="4"></td>
+                <td>TAREA</td>
+                <td>{{byTask.taskName | truncateTail:true:20:'...'}}</td>
+                <td>{{byTask.duration}}</td>
+                <td>$ {{byTask.subTotalCost}}</td>
+                <td></td>
+              </tr>
+            </tbody>
+            <tfoot>
+              <tr
+                ng-if="userRole=='admin' || userRole == 'pm' && filter.idUser "
+                style="
+                  background-color: rgba(60, 144, 190, 0.1);
+                  font-weight: bold;
+                "
+              >
+                <td colspan="5"></td>
+                <td>{{ 'reports.sub_total' | translate | uppercase }}</td>
+                <td>{{tracks.duration}}</td>
+                <td>$ {{tracks.subTotalCost}}</td>
+                <td></td>
+              </tr>
+            </tfoot>
+            <tbody ng-repeat="byProject in tracks.byProject" class="flex-column">
+              <table
+                ng-repeat="track in byProject.tracks track by $index"
+                class="flex-column-wrap"
+                id="datatable"
+              >
+                  <tr
+                    ng-if="$index == byProject.tracks.length - 1 && !filter.idTask"
+                    class="flex-row"
+                    style="
+                      background-color: rgb(255, 243, 115);
+                      font-weight: bold;
+                    "
+                  >
+                    <td class="flex-item"></td>
+                    <td class="flex-item"></td>
+                    <td class="flex-item"></td>
+                    <td class="flex-item"></td>
+                    <td class="flex-item">PROYECTO</td>
+                    <td class="flex-item">
+                      {{ byProject.projectName | truncateTail:true:20:'...' }}
+                    </td>
+                    <td class="flex-item">{{byProject.duration}}</td>
+                    <td class="flex-item">$ {{byProject.subTotalCost}}</td>
+                    <td style="flex: 5%; width: 5%"></td>
+                  </tr>
+                </div>
+              </table>
+            </tbody>
+            <tfoot>
+              <tr
+                style="
+                  background-color: rgba(104, 149, 191, 0.4);
+                  font-weight: bold;
+                "
+              >
+                <td colspan="5"></td>
+                <td>{{ 'reports.total' | translate | uppercase }}</td>
+                <td>{{total}}</td>
+                <td>$$$$$ {{totalcost}}</td>
+                <td></td>
+              </tr>
+            </tfoot>
+          </table>
+        </div>
       </div>
       <div ng-if="itemTab == 1">
         <br />
