--- a/app/src/js/app/components/reports/views/reportsView.html
+++ b/app/src/js/app/components/reports/views/reportsView.html
@@ -454,7 +454,7 @@
                 <td colspan="5"></td>
                 <td>{{ 'reports.total' | translate | uppercase }}</td>
                 <td>{{total}}</td>
-                <td>$$$$$ {{totalcost}}</td>
+                <td>$ {{totalcost}}</td>
                 <td></td>
               </tr>
             </tfoot>
