--- a/app/src/js/app/components/weeklyHours/views/weeklyHourFormView.html
+++ b/app/src/js/app/components/weeklyHours/views/weeklyHourFormView.html
@@ -62,6 +62,17 @@
       </label>
     </div>
 
+    <div class="imm-frm__fld">
+      <label class="imm-frm__lbl">
+        <select ng-model="weeklyHour.currency" id="">
+          <option value="$">$</option>
+          <option value="USD">USD</option>
+          <option value="R$">R$</option>
+        </select>
+        <b class="imm-frm__lbl-name">{{ 'weeklyHours.currency' | translate }} <span class="required">*</span></b>
+      </label>
+    </div>
+
   </div>
 
 </form>
