--- a/app/src/js/app/components/dashboard/views/indexView.html
+++ b/app/src/js/app/components/dashboard/views/indexView.html
@@ -23,7 +23,8 @@
         <tbody>
             <tr ng-repeat="track in tracks" ng-if="!track.endTime || track.endTime == '0000-00-00 00:00:00'">
                 <td>{{track.userName}}</td>
-            	  <td>{{track.projectName}}</td>
+                <td><a ng-if="userRole == 'admin'" ui-sref="app.projectEdit({id: track.idProyecto})" target="_blank">{{track.projectName | truncateTail:true:30:'...'}}</a></td>
+            	<td ng-if="userRole != 'admin'">{{track.projectName}}</td>
                 <td>{{track.taskName}}</td>
                 <td>{{track.startTime | date:'dd/MM/yyyy HH:mm' }}</td>
                 <td></td>
