--- a/app/src/js/app/components/dashboard/views/indexView.html
+++ b/app/src/js/app/components/dashboard/views/indexView.html
@@ -4,8 +4,8 @@
             <a class="imm-bc-item">{{ 'dashboard.title' | translate }}</a>
         </h1>
         <div class="imm-bc" ng-if="tracks.length">
-            <a class="imm-bc-item" ng-if="userRole == 'admin'">{{ 'dashboard.current_tracks' | translate }}</a>
-            <a class="imm-bc-item" ng-if="userRole == 'developer'">{{ 'dashboard.recent_activity' | translate }}</a>
+            <a class="imm-bc-item" ng-if="userRole == 'admin' || userRole == 'developer'">{{ 'dashboard.current_tracks' | translate }}</a>
+            <!-- <a class="imm-bc-item" ng-if="userRole == 'developer'">{{ 'dashboard.recent_activity' | translate }}</a> -->
         </div>
     </div>
 </div>
@@ -38,8 +38,8 @@
                 <th>{{ 'dashboard.project' | translate }}</th>
                 <th>{{ 'dashboard.task' | translate }}</th>
                 <th>{{ 'dashboard.start_time' | translate }}</th>
-                <th>{{ 'dashboard.end_time' | translate }}</th>
-                <th>{{ 'dashboard.duration' | translate }}</th>
+                <!-- <th>{{ 'dashboard.end_time' | translate }}</th>
+                <th>{{ 'dashboard.duration' | translate }}</th> -->
                 <th class="imm-cstm__grid-5"></th>
             </tr>
         </thead>
@@ -48,8 +48,8 @@
                 <td>{{track.projectName}}</td>
                 <td>{{track.taskName}}</td>
                 <td>{{track.startTime | date:'dd/MM/yyyy HH:mm' }}</td>
-                <td>{{track.endTime ? track.endTime : '' | date:'dd/MM/yyyy HH:mm' }}</td>
-                <td>{{track.duration}}</td>
+                <!-- <td>{{track.endTime ? track.endTime : '' | date:'dd/MM/yyyy HH:mm' }}</td>
+                <td>{{track.duration}}</td> -->
                 <td></td>
             </tr>
 <!--             <tr style="background-color: rgba(60, 144, 190, 0.1); font-weight: bold;">
