various views fixes

--- a/app/src/js/app/components/tasks/tasks/views/tasksView.html
+++ b/app/src/js/app/components/tasks/tasks/views/tasksView.html
@@ -13,6 +13,7 @@
         <thead>
             <tr>
                 <th>{{ 'tasks.project' | translate }}</th>
+                <th ng-if="userRole != 'admin'"></th>
                 <th>{{ 'tasks.task' | translate }}</th>
                 <th>{{ 'tasks.description' | translate }}</th>
                 <th>{{ 'tasks.duration' | translate }}</th>
@@ -26,6 +27,7 @@
         <tbody>
             <tr>
                 <td><input class="field-filter" ng-model="filter.projectName"></td>
+                <td ng-if="userRole != 'admin'"></td>
                 <td><input class="field-filter" ng-model="filter.name"></td>
                 <td><input class="field-filter" ng-model="filter.description"></td>
                 <td></td>
@@ -37,7 +39,7 @@
             </tr>
             <tr ng-repeat="(index,task) in tasks" ng-class="{'active-task': currentTrack.idTask == task.id}" ng-style="task.status == 'Done' && {'background-color':'#3b0'}  || task.status == 'In-Review' && {'background-color':'#AE2E2E'} || task.status == 'In-Progress' && {'background-color':'#ccad16'}">
                 <td ng-if="userRole != 'admin'" title="{{task.projectName}}">{{task.projectName | truncateTail:true:30:'...'}}</td>
-                <td><a ng-if="userRole == 'admin'" ui-sref="app.projectEdit({id: task.idProject})" target="_blank">{{task.projectName | truncateTail:true:30:'...'}}</a></td>
+                <td><a ng-if="userRole == 'admin'" style="color: #4a90e2; text-decoration: underline" ui-sref="app.projectEdit({id: task.idProject})" target="_blank">{{task.projectName | truncateTail:true:30:'...'}}</a></td>
                 <td title="{{task.name}}">{{task.name | truncateTail:true:30:'...'}}</td>
                 <td title="{{task.description}}">{{task.description | truncateTail:true:45:'...'}}</td>
                 <td>{{task.duration}}</td>
