--- a/app/src/js/app/components/tasks/taskTrello/views/taskTrelloView.html
+++ b/app/src/js/app/components/tasks/taskTrello/views/taskTrelloView.html
@@ -22,6 +22,7 @@
                 <th class="imm-cstm__grid-5"></th>
                 <th class="imm-cstm__grid-5"></th>
                 <th class="imm-cstm__grid-5"></th>
+
             </tr>
         </thead>
         <tbody>
@@ -37,15 +38,21 @@
                 <td title="{{task_trello.id}}">{{task_trello.id | truncateTail:true:30:'...'}}</td>
                 <td>{{task_trello.projectName}}</td>
                 <td>{{task_trello.url}}</td>
-                <td>
+                <td>                        
                     <a href="" ui-sref="app.tasks_trelloEdit({id: task_trello.id})">
+                        <i class="far fa-eye" style="font-size: 13px;color: #4a90e2;"></i>                    
+                    </a>
+                </td>
+                <td>
+                    <a href="" ng-click="editBoard(task_trello)">
                         <img src="assets/images/icons/pencil-ico.svg">
                     </a>
                 </td>
-                <td ng-if="task_trello.status != 'Done' && task_trello.status != 'In-Review' && isClient=='false' ">
+                <td>
+                    <a ng-click="deleteBoard(task_trello)">
+                        <i class="fas fa-window-close" style="color:red;font-size: 13px; margin-left:10px;cursor: pointer;"></i>                  
+                      </a>
                 </td>
-                <td ng-if="isClient=='true'"></td>
-                <td ng-if="task_trello.status == 'Done' || task_trello.status == 'In-Review' && isClient=='false'"></td>
             </tr>
         </tbody>
     </table>
