--- a/app/src/js/app/components/tasks/taskTrello/views/taskTrello.modal.html
+++ b/app/src/js/app/components/tasks/taskTrello/views/taskTrello.modal.html
@@ -22,52 +22,94 @@
           </div>
           <div class="imm-frm__fld">
             <label class="imm-frm__lbl">
-              <ui-select append-to-body="true" class="imm-select imm-select--input" theme="selectize"  ng-model="selected.value.id">
-                <ui-select-match placeholder={{task_trello.status}}>
-                    {{$select.selected.name}}
-                </ui-select-match>
-                <ui-select-choices repeat="item in jsonObj | filter: $select.search track by item.id">
-                    <span ng-bind="item.name"></span>
-                </ui-select-choices>
-              </ui-select>
-
-          <b class="imm-frm__lbl-name">{{ 'tasks_trello.status' | translate }} <span class="required">*</span></b>
-        </label>
-
-      </div>
-
-        </div>
-
-        <div class="imm-frm__fldgrp">
-          <div class="imm-frm__fld">
-            <label class="imm-frm__lbl">
-              <!--<input type="text" ng-model="task.description">-->
-              <input rows="7" cols="50" ng-model="task_trello.card_id" ng-if="isAdmin=='false' && isClient=='false'" readonly>
-              <input rows="7" cols="50" ng-model="task_trello.card_id" ng-if="isAdmin=='true' || isClient=='true'">
+              <input rows="7" cols="50" ng-model="task_trello.id" ng-if="isAdmin=='false' && isClient=='false'" readonly>
               <b class="imm-frm__lbl-name">{{ 'tasks_trello.card_id' | translate }}</b>
             </label>
           </div>
-    <div class="imm-frm__fld">
-      <label class="imm-frm__lbl">
-        <input type="text" ng-model="task_trello.idboard">
-        <!-- <span style="width: 10px;"><input type="number" min="0" class="f-hour" " placeholder="hhhh" string-to-number ng-model="duration.hours" ng-if="isAdmin=='false' && isClient=='false'" readonly ><input type="number" min="0" max="59" class="f-minute"  " placeholder="mm"  ng-model="duration.minutes" ng-if="isAdmin=='false' && isClient=='false'" readonly><input type="number" min="0" max="59" class="f-second"  " placeholder="ss"  ng-model="duration.seconds" ng-if="isAdmin=='false' && isClient=='false'" readonly ></span>
-        <span style="width: 10px;"><input type="number" min="0" class="f-hour" " placeholder="hhhh" string-to-number ng-model="duration.hours" ng-if="isAdmin=='true' || isClient=='true'"  ><input type="number" min="0" max="59" class="f-minute"  " placeholder="mm"  ng-model="duration.minutes"  ng-if="isAdmin=='true' || isClient=='true'"  ><input type="number" min="0" max="59" class="f-second"  " placeholder="ss"  ng-model="duration.seconds"  ng-if="isAdmin=='true' || isClient=='true'"   ></span> -->
+        </div>
 
-        <b class="imm-frm__lbl-name">ID Tablero</b>
-      </label>
+    <div class="imm-frm__fldgrp">
+      <div class="imm-frm__fld">
+        <label class="imm-frm__lbl">
+          <table>
+            <tbody>
+              <tr ng-repeat="status in task_trello.selectStatus" ng-style="{ 'background-color': status.isEdited ? '#008eff21' : 'white' }">
+                <td>
+                  <span ng-if="!status.isEdited" >{{status.name}}</span>  
+                  <select ng-if="isEditing && status.isEdited" ng-model="status.id" ng-change="editViewStatus(status, labels)">
+                    <option ng-repeat="labels in boardLabels" value="{{labels.id}}">{{labels.name}}</option>
+                  </select>
+                </td>
+                <td>
+                  <a ng-click="confirmStatus(status)" ng-if="isEditing && status.isEdited">
+                    <i class="far fa-save" style="color: #4a90e2;font-size: 13px;cursor: pointer;"></i>                  
+                  </a>
+                  <a ng-click="editStatus(status)" ng-if="!isEditing">
+                    <img src="assets/images/icons/pencil-ico.svg" style="cursor: pointer;">
+                  </a>
+                  <a ng-click="cancelEditStatus(status)" ng-if="isEditing && status.isEdited">
+                    <i class="fas fa-window-close" style="color:red;font-size: 13px; margin-left:10px;cursor: pointer;"></i>                  
+                  </a>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+          <b class="imm-frm__lbl-name">{{ 'tasks_trello.status' | translate }}</b>
+        </label>
+     </div>
     </div>
-
-  </div>
-
-        <div class="imm-frm__fldgrp">
-          <div class="imm-frm__fld">
-            <label class="imm-frm__lbl">
-              <!--<input type="text" ng-model="task.description">-->
-              <textarea rows="7" cols="50" ng-model="task_trello.description" ng-if="isAdmin=='false' && isClient=='false'" readonly></textarea>
-              <textarea rows="7" cols="50" ng-model="task_trello.description" ng-if="isAdmin=='true' || isClient=='true'"></textarea>
-              <b class="imm-frm__lbl-name">{{ 'tasks_trello.description' | translate }}</b>
-            </label>
-          </div>
+    <div class="imm-frm__fldgrp">
+      <div class="imm-frm__fld">
+        <a class="imm-btn" ng-if="isCardMembers" style="float: right; margin-bottom:-20px" ng-click="showAllMembers()">{{ '+ Usuario' }}</a>
+        <a class="imm-btn" ng-if="isBoardMembers" style="float: right; margin-bottom:-20px" ng-click="showCardMembers()">{{ 'Guardar' }}</a>
+      </div>
+    </div>
+    <div class="imm-frm__fldgrp">
+      <div class="imm-frm__fld">
+        <label class="imm-frm__lbl">
+          <table>
+            <thead>
+              <tr>
+                <th>Usuario</th>
+                <th></th>
+              </tr>
+            </thead> 
+            <tbody ng-if="isCardMembers">
+              <tr ng-repeat="member in membersCard track by $index">
+                <td>{{member.fullName}}</td>
+                <td></td>
+              </tr>
+            </tbody>
+            <tbody ng-if="isBoardMembers">
+              <tr ng-repeat="member in membersBoard">
+                <td>{{member.fullName}}</td>
+                <td><input type="checkbox" ng-model="member.isAsigned" ng-change="assingMember(member)" name="" id=""></td>
+              </tr>
+            </tbody>
+          </table>
+        </label>
+     </div>
+    </div>
+    <div class="imm-frm__fldgrp" ng-if="checklist.length > 0">
+      <div class="imm-frm__fld">
+        <label class="imm-frm__lbl">
+          <table>
+            <thead>
+              <tr>
+                <th>Tareas</th>
+                <th>Estado</th>
+              </tr>
+            </thead> 
+            <tbody>
+              <tr ng-repeat="item in checklist track by $index">
+                <td>{{item.name}}</td>
+                <td><input type="checkbox" ng-model="item.complete" ng-change="updateChecklist(item)"></td>
+              </tr>
+            </tbody>
+          </table>
+        </label>
+     </div>
+    </div>
   </form>
 </ng-form>
 </div>
