reports search button fix

--- a/app/src/js/app/components/reports/views/reportsView.html
+++ b/app/src/js/app/components/reports/views/reportsView.html
@@ -125,7 +125,7 @@
 
       <div class="imm-frm__fld">
         <label class="imm-frm__lbl">
-          <button class="imm-btn" ng-click="search()">
+          <button class="imm-btn" ng-click="search()" id="buscar">
             {{ 'reports.search' | translate }}
           </button>
         </label>
